@@ -1,4 +1,6 @@
-See:
-* http://code.google.com/p/libcerror/wiki/Building
-* README.macosx
+For project documentation see:
+* https://github.com/libyal/libcerror/wiki/Home
+
+For how to build from source see:
+* https://github.com/libyal/libcerror/wiki/Building
 
