@@ -8,5 +8,5 @@ Use glibtoolize instead
 
 
 Building multiple architecture binaries
-See: http://code.google.com/p/libcerror/wiki/Building
+See: https://github.com/libyal/libcerror/wiki/Building
 
