@@ -5,7 +5,7 @@ Summary: Library to support cross-platform C error functions
 Group: System Environment/Libraries
 License: LGPL
 Source: %{name}-%{version}.tar.gz
-URL: http://code.google.com/p/libcerror/
+URL: https://github.com/libyal/libcerror/
 BuildRoot: %{_tmppath}/%{name}-%{version}-%{release}-root-%(%{__id_u} -n)
 @libcerror_spec_requires@ @ax_libcstring_spec_requires@
 @libcerror_spec_build_requires@ @ax_libcstring_spec_build_requires@
