@@ -28,7 +28,7 @@ BEGIN
       VALUE "OriginalFilename",		"libcerror.dll\0"
       VALUE "ProductName",		"libcerror\0"
       VALUE "ProductVersion",		"@VERSION@" "\0"
-      VALUE "Comments",			"For more information visit http://code.google.com/p/libcerror/\0"
+      VALUE "Comments",			"For more information visit https://github.com/libyal/libcerror/\0"
     END
   END
   BLOCK "VarFileInfo"
